--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
+title: [ameer majeed]
+description: [ai researcher specializing in computer vision, image processing, and optical character recognition]
