--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-remote_theme: pages-themes/modernist@v0.2.0
+remote_theme: pages-themes/tactile@v0.2.0
 plugins:
 - jekyll-remote-theme
-title: [ameer majeed]
-description: [ai researcher specializing in computer vision, image processing, and optical character recognition]
+title: ameer majeed
+description: ai researcher specializing in computer vision, image processing, and optical character recognition
