--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-remote_theme: pages-themes/tactile@v0.2.0
-plugins:
-- jekyll-remote-theme
+# remote_theme: pages-themes/tactile@v0.2.0
+# plugins:
+# - jekyll-remote-theme
 title: ameer majeed
 logo: image.png
 description: ai researcher specializing in computer vision, image processing, and optical character recognition
