--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,11 @@
 # remote_theme: pages-themes/tactile@v0.2.0
 # plugins:
 # - jekyll-remote-theme
-title: ameer majeed
-
+title: Ameer Majeed
+description: Wannabe Computer Scientist / History Freak
+email: ameer.ha.majeed@gmail.com
+twitter_username: ameermajeedcv
+github_username: ameermajeed
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme 
