--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@
 # - jekyll-remote-theme
 title: Ameer Majeed
 description: Wannabe Computer Scientist / History Freak
+logo: image.png
 email: ameer.ha.majeed@gmail.com
 twitter_username: ameermajeedcv
 github_username: ameermajeed
